Contrast error finally solved

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
 }
 
 a {
-    color: #0468847;
+    color: #468847;
     text-decoration: underline;
 }
 
